--- a/smoking-tracker/app.json
+++ b/smoking-tracker/app.json
@@ -115,6 +115,11 @@
 			}
 		},
 		{
+			"type": "spacer",
+			"scope": "root",
+			"settings": {}
+		},
+		{
 			"type": "expression",
 			"scope": "root",
 			"settings": {
